# napari-labelprop-remote

./: .gitignore  LICENSE  README.md  conf.json  exemple.py  labels_2.labels  mkdocs.yml  pyproject.toml  setup.cfg  test.npz  test_api.py  tox.ini
docs/: index.md
src/napari_labelprop_remote/: __init__.py  _reader.py  _widget.py  _writer.py  conf.json  napari.yaml
src/napari_labelprop_remote/_tests/: test_reader.py  test_widget.py  test_writer.py
